--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2.igniting_the_app",
+  "name": "food_delivery",
   "version": "1.0.0",
   "description": "igniting app",
   "main": "App.js",
